Prevent admin pages from jumping with messages

--- a/_plugins/main/resources/admin.css
+++ b/_plugins/main/resources/admin.css
@@ -20,3 +20,7 @@
 .table .th {
 	vertical-align: middle;
 }
+
+.message {
+	height: 1em;
+}
